Logging & Register User Complete

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning",
+      "Microsoft": "Information"
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;Database=EmployeeDB;Trusted_Connection=True"
   }
