Identity Passowrd Customization & BLOB SERVICE

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;Database=EmployeeDB;Trusted_Connection=True"
-  }
+  },
+  "BlobConnectionString": ""
 }
